force-app/main/default/objects/Form_Conversion_Source__c/Form_Conversion_Source__c.object-meta.xml
<CustomObject>
    <label>Form Conversion Source</label>
    <nameField>
        <label>Form Conversion Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Conversion Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>