force-app/main/default/objects/Form_Conversion_Source__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related campaign for this submission which would be linked via a matching UTM Campaign values.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Form Conversion Sources</relationshipLabel>
    <relationshipName>Form_Conversion_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>