force-app/main/default/objects/Form_Conversion_Source__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Form Conversion Sources</relationshipLabel>
    <relationshipName>Form_Conversion_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>