force-app/main/default/objects/Form_Conversion_Source__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <label>Form Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Case Study Submission</fullName>
            </value>
            <value>
                <fullName>Corporate Volunteer Form</fullName>
            </value>
            <value>
                <fullName>Digital Puppet Playdate</fullName>
            </value>
            <value>
                <fullName>Family Registration Form</fullName>
            </value>
            <value>
                <fullName>Gift In Will</fullName>
            </value>
            <value>
                <fullName>Hospital Family Registration Form</fullName>
            </value>
            <value>
                <fullName>Puppet Show Request</fullName>
            </value>
            <value>
                <fullName>Referral Form</fullName>
            </value>
            <value>
                <fullName>Volunteer Application Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>