force-app/main/default/objects/Form_Conversion_Source__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Form Conversion Sources</relationshipLabel>
    <relationshipName>Form_Conversion_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>