force-app/main/default/objects/Form_Conversion_Source__c/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <externalId>true</externalId>
    <label>UTM Campaign</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>