force-app/main/default/objects/Form_Conversion_Source__c/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>UTM Medium</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>