force-app/main/default/objects/Form_Conversion_Source__c/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <label>UTM Source</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>