force-app/main/default/objects/Form_Conversion_Source__c/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <label>UTM Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>