force-app/main/default/objects/Form_Conversion_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form_Name__c</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>Campaign__c</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>UTM_Campaign__c</columns>
    <columns>UTM_Medium__c</columns>
    <columns>UTM_Source__c</columns>
    <columns>Submission_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>